--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -37,6 +37,12 @@
   text-decoration: none;
 }
 
+i.fa-moon {
+  margin-right: 8px; 
+  font-size: 16px;   
+  color: #FFD700;    
+}
+
 .header li a:hover,
 .header .menu-btn:hover {
   background-color: #f4f4f4;
@@ -143,6 +149,7 @@
 .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
   top: 0;
 }
+
 
 /* 48em = 768px */
 
